toggle button update

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,7 @@
   margin-right: 50px;
 }
 .navbar-toggler {
-  background-color:rgba(121, 121, 121, 0.9); ;
+  background-color:rgb(86 86 86 / 90%) ;
 }
 #logo {
   width: 90px;
